<resources>
    <string name="app_name">Dubbing</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="dubbing_process_text_indicator">Processing...</string>
    <string name="str_system_eval">System Remark:</string>
    <string name="str_teacher_comment">Teacher\'s comment:</string>
    <string name="str_teacher_comment_no_point">Teacher\'s Comment</string>
    <string name="str_teacher_eval">Teacher Remark:</string>
    <string name="str_see_by_sentence">By Sentence</string>
    <string name="no_content">No data</string>
    <string name="str_score_tip">Points</string>
    <string name="str_dubbing_preview">Preview</string>
    <string name="str_dubbing_commit">Submit</string>
    <string name="str_dubbing_finish_all_tips">Please finish dubbing before submitting</string>
    <string name="str_dubbing_preview_all_dubbing">Please preview after dubbing finishes</string>
    <string name="str_dubbing_recording">Dubbing...</string>
    <string name="str_preview_origin_voice">Watch original video</string>
    <string name="str_listen_voice">Origin</string>
    <string name="str_listen_dubbing_voice">Dubbing</string>
    <string name="str_unfinish_dubbing_back">Dubbing not finished, still exit?</string>
    <string name="str_continue_dubbing">Resume</string>
    <string name="str_record_err">Recording error, please retry</string>
    <string name="str_evaluate_fail">Marking failed, please re-submit</string>
    <string name="str_teacher_review">Remark</string>
    <string name="str_save_space_small">Insufficient space！Will exit within 5s</string>
    <string name="str_refuse_permission">No recording permission, please enable the permission</string>
</resources>
